--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MBTI ZOO</title>
+  <title>MBTI ZOO | 심리 테스트 모음</title>
+  <meta name="description" content="MBTI ZOO에서 다양한 MBTI 기반 심리 테스트를 즐겨보세요.">
+  <meta name="robots" content="index,follow">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="author" content="DREAMPROJECT">
+  <link rel="canonical" href="https://dreamp.org/index.html">
+
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="ko_KR">
+  <meta property="og:site_name" content="MBTI ZOO">
+  <meta property="og:title" content="MBTI ZOO | 심리 테스트 모음">
+  <meta property="og:description" content="MBTI ZOO에서 다양한 MBTI 기반 심리 테스트를 즐겨보세요.">
+  <meta property="og:url" content="https://dreamp.org/index.html">
+  <meta property="og:image" content="https://dreamp.org/assets/images/mainbanner.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="MBTI ZOO | 심리 테스트 모음">
+  <meta name="twitter:description" content="MBTI ZOO에서 다양한 MBTI 기반 심리 테스트를 즐겨보세요.">
+  <meta name="twitter:image" content="https://dreamp.org/assets/images/mainbanner.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
