--- a/public/testresult.html
+++ b/public/testresult.html
@@ -19,14 +19,12 @@
     <meta property="og:title" content="MBTI ZOO | 테스트 결과">
     <meta property="og:description" content="테스트 결과를 확인하고 친구들과 공유해보세요.">
     <meta property="og:url" content="https://dreamp.org/testresult.html">
-    <meta property="og:image"
-        content="https://dreamp.org/assets/images/mainbanner.png">
+    <meta property="og:image" content="https://dreamp.org/assets/images/mainbanner.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="MBTI ZOO | 테스트 결과">
     <meta name="twitter:description" content="테스트 결과를 확인하고 친구들과 공유해보세요.">
-    <meta name="twitter:image"
-        content="https://dreamp.org/assets/images/mainbanner.png">
+    <meta name="twitter:image" content="https://dreamp.org/assets/images/mainbanner.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
