--- a/public/testintro.html
+++ b/public/testintro.html
@@ -109,4 +109,4 @@
   </div>
 </body>
 
-<script type="module" src="./scripts/testintro.js"></script>
+<script type="module" src="./scripts/testintro.js" crossorigin="anonymous"></script>
